--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KOYO PORTFOLIO</title>
+    <title>KOYO PORTFOLIO!</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/index.js"></script>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="main">
-        <h1>KOYO PORTFOLIO</h1>
+        <h1>KOYO PORTFOLIO!</h1>
     </div>
     
     <div id="menu">
